changed subtitle explaing me
changed to 3 things- novice web developer, artist, gis student and environment science major student

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">Lali Website</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Novice Web Developer - Artist - GIS student and Environmental Science major student</span>
                     </div>
                 </div>
             </div>
