--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
+                    <!--<a href="#" class="btn btn-lg btn-outline"> -->
                         <!--<i class="fa fa-download"></i> Download Theme -->
                     </a>
                 </div>
@@ -262,14 +262,14 @@
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                               <!--<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>-->
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-col col-md-4">
+                  <!--<div class="footer-col col-md-4">
                         <h3>About Freelancer</h3>
                         <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
