last tweaks on prj2

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                         <div class="modal-body">
                             <h2>Project Two: GIS II</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>This map is from my GIS II class.The goal of this project was to identify food deserts in the Chicago area and find a suitable location for a new store to reduce the amount food desert areas. The multiple criteria for this project includes: 1) Store location, (store density), 2) Public transit location, 3) population density. In ARCGIS, the raster calculator combined all the layers with the given weights and able to compute the formula and resulting in the final map.</p>
+                            <img src="http://gdurl.com/Qvrs" class="img-responsive img-centered" alt="">
+                            <p>This map is from my GIS II class. The goal of this project was to identify food deserts in the Chicago area and find a suitable location for a new store to reduce the amount food desert areas. The multiple criteria for this project includes: 1) Store location, (store density), 2) Public transit location, 3) population density. In ARCGIS, the raster calculator combined all the layers with the given weights and was able to compute the formula and resulting in the final map.</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
