wrote in about me
some stuff about me n the website

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hi my name is Lali and I am a NEIU environmental science and GIS student and all purpose artist. Creativity is very much a huge part of who I am, we go hand and hand. I use my creativity skills and problem solving/ hands on skills to tackle all the new learning opportunities.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Environmental and computer science has always got my attention and attending NEIU I explored and began enhancing my skills. This website showcases my journey from GIS 1, GIS 2, and GIS 3. I still consider myself a beginner because there is so much more to learn. But here, I'll show you my progress with my different maps. Enjoy!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!--<a href="#" class="btn btn-lg btn-outline"> -->
