--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="http://gdurl.com/ADqW" class="img-responsive" alt="">
+                        <img src="http://gdurl.com/6lAP" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
