putting the pic n info into the 1st icon

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                         <div class="modal-body">
                             <h2>Project One: GIS I</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p> GIS 1 first project. A group project in vector format about foreclosures in the City of Chicago.</p>
+                            <img src="http://gdurl.com/6lAP" class="img-responsive img-centered" alt="">
+                            <p> This map is from my first GIS I class, just starting to get my feet with the ArcGIS. This map was from one of the exercises to understand the concept of join data from a table to shapefile that has no data. In addition to understand the thematic concepts and options to present a map.</p>
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
