add the 3rd map and its info

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <img src="http://gdurl.com/AQmE" class="img-responsive" alt="">
                     </a>
                 </div>
                 <!-- <div class="col-sm-4 portfolio-item">
@@ -417,8 +417,8 @@
                         <div class="modal-body">
                             <h2>Project Three: GIS III</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p></p>
+                            <img src="http://gdurl.com/AQmE" class="img-responsive img-centered" alt="">
+                            <p>This map is from my GIS III class using the program QGIS. This my first attempt in using QGIS and took a lot of trial and error but I got the hang of it. The special feature I am using here is the inverted polygon to highlight the Austin neighborhood from the rest of Chicago. I decided to digitize my grammar school in my neighborhood by hand. It was interesting learning new ways to create unique maps and I also used the mask function here as well.</p>
                             <ul class="list-inline item-details">
                                 <!--<li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
